--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -394,6 +394,8 @@
     <Content Include="Views\Rapport\RapportPlanCadre.cshtml" />
     <Content Include="Views\PlanCadre\_TreeView.cshtml" />
     <Content Include="Views\PlanCadreEnonce\Index.cshtml" />
+    <Content Include="Views\PlanCadre\Edit.cshtml" />
+    <Content Include="Views\PlanCadre\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
