--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -264,6 +264,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\extend.css" />
+    <Content Include="Content\Images\cegep-frost.jpg" />
     <Content Include="Content\Images\cegep-index.png" />
     <Content Include="Content\Images\cegep.jpg" />
     <Content Include="Content\Images\cegep2.jpg" />
@@ -271,11 +272,15 @@
     <Content Include="Content\Images\cj-layout.png" />
     <Content Include="Content\Images\cj-logo.png" />
     <Content Include="Content\Images\dicj-logo.png" />
+    <Content Include="Content\Images\portail-layout.svg" />
     <Content Include="Content\Images\portail-logo.png" />
+    <Content Include="Content\treeview.css" />
+    <Content Include="Content\Images\watermark.png" />
+    <Content Include="Content\table.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
