--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Models\DevisMinistere.cs" />
     <Compile Include="Models\ElementCompetence.cs" />
     <Compile Include="Models\EnonceCompetence.cs" />
+    <Compile Include="Models\EnonceCompetenceAJAX.cs" />
     <Compile Include="Models\EnteteProgramme.cs" />
     <Compile Include="Models\GrilleCours.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -389,6 +390,7 @@
     <Content Include="Views\Rapport\RapportPlanCadre.cshtml" />
     <Content Include="Views\PlanCadre\Index.cshtml" />
     <Content Include="Views\PlanCadre\_TreeView.cshtml" />
+    <Content Include="Views\EnonceCompetence\CreateAJAX.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
