--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/ApplicationPlanCadre.csproj
@@ -208,6 +208,8 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\GrilleCoursController.cs" />
     <Compile Include="Controllers\GrilleCoursEnonceController.cs" />
+    <Compile Include="Helpers\RCPAuthorize.cs" />
+    <Compile Include="Models\AccesProgramme.cs" />
     <Compile Include="Models\GrilleCoursViewModel.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\DevisMinistereController.cs" />
@@ -215,15 +217,13 @@
     <Compile Include="Controllers\RapportController.cs" />
     <Compile Include="Controllers\RechercheController.cs" />
     <Compile Include="Controllers\PlanCadreController.cs" />
-    <Compile Include="Controllers\PlanCadreEnonceController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\MailHelper.cs" />
-    <Compile Include="Helpers\CustomAuthorize.cs" />
+    <Compile Include="Helpers\FilterAuthorize.cs" />
     <Compile Include="Helpers\HighlightHelper.cs" />
     <Compile Include="Helpers\PasswordGenerator.cs" />
-    <Compile Include="Helpers\RolesHelper.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ActiviteApprentissage.cs" />
     <Compile Include="Models\BDPlanCadre.cs" />
@@ -344,7 +344,6 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Accueil\Index.cshtml" />
-    <Content Include="Views\Error\AccessDenied.cshtml" />
     <Content Include="Views\DevisMinistere\Index.cshtml" />
     <Content Include="Views\ConsoleDevisMinistere\Edit.cshtml" />
     <Content Include="Views\ConsoleDevisMinistere\Create.cshtml" />
@@ -403,6 +402,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Files\Document ministériel\" />
+    <Folder Include="Views\AccesProgramme\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
